iron-functions/deployment/k8s-production/ext.redis.yaml
# Redis service for Iron Functions
# REFERENCES:
#   - https://github.com/iron-io/functions/tree/master/docs/operating/kubernetes/kubernetes-production
#   - https://hub.docker.com/_/redis/
# TODOS:
#   - replace %__ironfx_mq_namespace__% with the namespace for deploying Redis in

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ironfx-redis
  namespace: %__ironfx_mq_namespace__%
  labels:
    app: ironfx-redis
    env: production
    type: queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ironfx-redis
      env: production
      type: queue
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      name: ironfx-redis
      namespace: %__ironfx_mq_namespace__%
      labels:
        app: ironfx-redis
        env: production
        type: queue
    spec:
      containers:
      - name: ironfx-redis
        image: redis:4-alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: ironfx-redis
  namespace: %__ironfx_mq_namespace__%
  labels:
    app: ironfx-redis
    env: production
    type: queue
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: ironfx-redis
    env: production
    type: queue
