iron-functions/deployment/k8s-production/ingress.api.yaml
# Ingress with BasicAuth for Iron Functions
# REFERENCES:
#   - https://github.com/iron-io/functions/tree/master/docs/operating/kubernetes/kubernetes-production
# TODOS:
#   - replace %__ironfx_namespace__% with the namespace for the Iron Functions API
#   - replace %__ironfx_api_hostname__% with the hostname to access this deployment with
#   - replace %__kube_lego_secret__% with the secret for your domain name

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ironfx-api
  namespace: %__ironfx_namespace__%
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: ironfx-api-authentication
    ingress.kubernetes.io/auth-realm: "Authentication for API"
spec:
  tls:
  - hosts:
    - %__ironfx_api_hostname__%
    secretName: %__kube_lego_secret__%
  rules:
  - host: %__ironfx_api_hostname__%
    http:
      paths:
      - path: /v1/apps
        backend:
          serviceName: ironfx
          servicePort: 8080
      - path: /v1/apps/[a-zA-Z0-9\-\_\.]+
        backend:
          serviceName: ironfx
          servicePort: 8080
      - path: /v1/apps/[a-zA-Z0-9\-\_\.]+/routes
        backend:
          serviceName: ironfx
          servicePort: 8080
