iron-functions/deployment/k8s-production/ingress.yaml
# Base Ingress for Iron Functions
# REFERENCES:
#   - https://github.com/iron-io/functions/tree/master/docs/operating/kubernetes/kubernetes-production
# TODOS:
#   - replace %__ironfx_namespace__% with the namespace for the Iron Functions API
#   - replace %__ironfx_api_hostname__% with the hostname to access this deployment with
#   - replace %__kube_lego_secret__% with the secret for your domain name

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ironfx
  namespace: common-services
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  tls:
  - hosts:
    - %__ironfx_api_hostname__%
    secretName: %__kube_lego_secret__%
  rules:
  - host: %__ironfx_api_hostname__%
    http:
      paths:
      - path: /
        backend:
          serviceName: ironfx
          servicePort: 8080
